--- a/app/views/podcasts/index.html.erb
+++ b/app/views/podcasts/index.html.erb
@@ -2,30 +2,22 @@
 
 <h1>Podcasts</h1>
 
-<table>
+<table class="table table-striped table-bordered">
   <thead>
     <tr>
       <th>Title</th>
       <th>Mp3</th>
       <th>Date</th>
-      <th colspan="3"></th>
     </tr>
   </thead>
 
   <tbody>
     <% @podcasts.each do |podcast| %>
       <tr>
-        <td><%= podcast.title %></td>
-        <td><%= podcast.mp3 %></td>
+        <td><%= link_to podcast.title, podcast_path(podcast) %></td>
+        <td><%= link_to 'Download', podcast_download_path(podcast) %></td>
         <td><%= podcast.date %></td>
-        <td><%= link_to 'Show', podcast %></td>
-        <td><%= link_to 'Edit', edit_podcast_path(podcast) %></td>
-        <td><%= link_to 'Destroy', podcast, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
-
-<br>
-
-<%= link_to 'New Podcast', new_podcast_path %>
