--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,7 @@
   </head>
 
   <body>
-    <main class="container">
+    <main class="container mh-100">
       <%= yield %>
     </main>
   </body>
